<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MUFI</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">MUFI Channel ID</string>
    <string name="default_notification_channel_name" translatable="false">MUFI Channel</string>
    <string name="default_notification_channel_description" translatable="false">Channel For MUFI Firebase</string>

    <string name="action_settings">설정</string>
    <string name="menu_home">지도</string>
    <string name="menu_photo">사진</string>
    <string name="menu_card">카드</string>
    <string name="menu_setting">설정</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="exit">종료</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="success">성공</string>
    <string name="failed">실패</string>
    <string name="delete">삭제</string>

    <string name="normal">일반</string>
    <string name="account">계정</string>
    <string name="app_setting">앱 설정</string>
    <string name="information_terms">앱 정보 및 약관</string>
    <string name="notice">공지사항</string>
    <string name="event">이벤트</string>
    <string name="send_feedback">문의하기</string>
    <string name="feedback_history">문의 내역</string>
    <string name="coupon">쿠폰</string>
    <string name="my_info">내 정보</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="logout">로그아웃</string>
    <string name="delete_account">회원탈퇴</string>
    <string name="notification_setting">알림 설정</string>
    <string name="delete_thumbnail">썸네일 삭제</string>
    <string name="app_version">버전 정보</string>
    <string name="business_information">사업자 정보</string>
    <string name="terms_of_service">이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="electric_financial_transactions_terms">전자금융거래 이용약관</string>
    <string name="open_source_license">오픈소스 라이선스</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="photo_fragment_label">Photo Fragment</string>

    <string name="scan_qr">QR 코드 찍기</string>
    <string name="add_card">카드 등록하기</string>
    <string name="kakao_button">KAKAO TALK으로 로그인하기</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="user_name">이름</string>
    <string name="call_number">전화번호</string>
    <string name="birthday">생일</string>
    <string name="birthday_six">생년월일</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="card_number">카드번호</string>
    <string name="expiration_date">유효기간</string>
    <string name="cvc">CVC 코드</string>
    <string name="cvc_hint">카드 뒷면 세 자리</string>
    <string name="card_pw_hint">비밀번호 앞 두 자리</string>
    <string name="download">다운로드</string>

    <string name="photo_date">촬영 날짜</string>
    <string name="photo_size">용량</string>
    <string name="photo_shop_name">촬영 매장</string>

    <string name="input_id">올바른 아이디를 입력해 주세요.</string>
    <string name="input_pw">올바른 비밀번호를 입력해 주세요.</string>
    <string name="login_error">아이디 또는 비밀번호가 잘못되었습니다.</string>
    <string name="app_exit">MUFI를 종료하시겠습니까?</string>
    <string name="id_validate">아이디는 4~20자의 영어 대소문자와 숫자만 가능합니다.</string>
    <string name="pw_validate">비밀번호는 8~16자 영어, 숫자, 특수문자를 사용해주세요.</string>
    <string name="validate_name">이름을 입력해 주세요.</string>
    <string name="validate_call_number">전화번호를 입력해 주세요.</string>
    <string name="validate_birth">생일을 입력해 주세요.</string>
    <string name="validate_birth_six">생년월일 6자리</string>
    <string name="validate_gender">성별을 선택해 주세요.</string>
    <string name="cancel_sign_up">회원가입을 취소하시겠습니까?</string>
    <string name="duplicate_id">이미 사용중인 ID입니다.</string>
    <string name="able_id">사용 가능한 ID입니다.</string>
    <string name="sign_up_success">회원가입에 성공하였습니다.</string>
    <string name="sign_up_failed">회원가입에 실패하였습니다.</string>

    <string name="cancel_add_card">카드 등록을 취소하시겠습니까?</string>
    <string name="canceled_add_card">카드 등록을 취소하였습니다.</string>
    <string name="success_add_card">카드를 등록하였습니다.</string>
    <string name="failed_add_card">카드 등록에 실패하였습니다.</string>
    <string name="validate_card_number">올바른 카드 번호를 입력해주세요.</string>
    <string name="validate_card_ex">올바른 카드 유효기간을 입력해주세요.</string>
    <string name="validate_card_cvc">올바른 CVC 번호를 입력해주세요.</string>
    <string name="validate_card_pw">카드 비밀번호 앞 두 자리를 입력해주세요.</string>

    <string name="sure_delete_photo">사진을 삭제하시겠습니까?</string>

    <string name="nav_header_title">MUFI</string>
    <string name="nav_header_subtitle">mufi@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_photo_fragment">Hello photo fragment. Arg: %1$s</string>
</resources>