<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/black_canvas"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_mufi_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="2dp" />
            <EditText
                android:id="@+id/inputID"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:hint="@string/id_validate"
                android:textSize="18dp"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="2dp" />
            <EditText
                android:id="@+id/inputPW"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:hint="@string/pw_validate"
                android:textSize="18dp"
                android:inputType="textPassword"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="2dp" />
            <EditText
                android:id="@+id/inputName"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:hint="@string/validate_name"
                android:textSize="18dp"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_number"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="2dp" />
            <EditText
                android:id="@+id/inputCallNumber"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:hint="@string/validate_call_number"
                android:textSize="18dp"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="2dp" />
            <EditText
                android:id="@+id/inputBirthday"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/birthday"
                android:textSize="18dp"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="2dp" />
            <RadioGroup
                android:id="@+id/gender_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp">
                <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="18dp"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="18dp"
                    android:layout_weight="1" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/signUpCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="24dp"
                    android:layout_margin="5dp" />

                <Button
                    android:id="@+id/signUpOkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="24dp"
                    android:layout_margin="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>