<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_margin="20dp"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_date"
                        android:theme="@style/originalPhotoTextViewStyle"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_size"
                        android:theme="@style/originalPhotoTextViewStyle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_shop_name"
                        android:theme="@style/originalPhotoTextViewStyle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="70dp">
                    <TextView
                        android:id="@+id/photo_date_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/originalPhotoTextViewStyle"/>
                    <TextView
                        android:id="@+id/photo_size_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/originalPhotoTextViewStyle"
                        android:layout_marginTop="20dp"/>
                    <TextView
                        android:id="@+id/photo_shop_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/originalPhotoTextViewStyle"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp">
                <Button
                    android:id="@+id/photo_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="23sp"
                    android:layout_marginHorizontal="20dp" />
                <Button
                    android:id="@+id/photo_download_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textSize="23dp"
                    android:layout_marginHorizontal="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>